--- a/res/style.css
+++ b/res/style.css
@@ -23,3 +23,10 @@ body{
     text-decoration: none;
     color: white;
 }
+.iltalehti{
+    background-color: lightcoral;
+}
+.iltasanomat{
+    background-color: orange;
+
+}
